--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,10 @@
 @import "modules/side_bar";
 @import "modules/chat";
 @import "modules/user";
+@import "modules/group";
 @import "messages/messages.scss";
 @import "font-awesome";
+@import "config/colors";
+@import "modules/flash";
 
 // 別ファイル_reset.scss呼び出し　. が一個だから一個上からパソコンが探すっていみ
